# three-body-problem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-multi-platform.yml
fortran/: three_body.f90
shaders/: frag.spv  raytrace.rchit.glsl  raytrace.rgen.glsl  raytrace.rmiss.glsl  shader.frag  shader.vert  vert.spv
src/: fortran_wrapper.cpp  fortran_wrapper.h  imgui_setup.cpp  imgui_setup.h  main.cpp  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_setup.cpp  vulkan_setup.h
tests/: test_main.cpp
